<!--Naveen Kumar N01355935 Section B -->
<resources>
    <string name="app_name">Naveen Kumar N01355935</string>
    <string name="dominos_pizzaRadio">Dominos Pizza</string>
    <string name="pizza_pizzaRadio">Pizza Pizza</string>
    <string name="pizza_hutRadio">Pizza Hut</string>
    <string name="nextButton">Next</string>
    <string name="proceed_to_paymentButton">Proceed to Payment</string>
    <string name="toppingsTextView">Toppings: (Scroll to choose)</string>
    <string name="select_sizeTextView">Select Size:</string>
    <string name="smallRadio">Small</string>
    <string name="mediumRadio">Medium</string>
    <string name="largeRadio">Large</string>
    <string name="x_largeRadio">X-Large</string>
    <string name="thin_crustRadio">Thin Crust</string>
    <string name="thick_crustRadio">Thick Crust</string>
    <string name="cheese_burstRadio">Cheese Burst</string>
    <string name="pan_pizzaRadio">Pan Pizza</string>
    <string name="capsicumCheck">Capsicum</string>
    <string name="green_peppersCheck">Green peppers</string>
    <string name="spinachCheck">Spinach</string>
    <string name="onionsCheck">Onions</string>
    <string name="pepperoniCheck">Pepperoni</string>
    <string name="mushroomCheck">Mushroom</string>
    <string name="black_olivesCheck">Black olives</string>
    <string name="select_crustTextView">Select Crust:</string>
    <string name="enter_name">Your Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="credit_card_no">Credit Card No.</string>
    <string name="expiry_date">MMYY</string>
    <string name="cvv">CVV</string>
    <string name="payment_size">Size:</string>
    <string name="payment_crust">Crust:</string>
    <string name="payment_toppings">Toppings:</string>
    <string name="name_length_error">Name should be atleast 3 characters</string>
    <string name="phoneNo_length_error">Length should be 10</string>
    <string name="postal_length_error">Length should be 6</string>
    <string name="creditNo_length_error">Length should be 16</string>
    <string name="expirydate_length_error">Length should be 4</string>
    <string name="cvv_length_error">Length should be 3</string>
    <string name="name_alpha_error">Name should only be alphabetic</string>
    <string name="city_alpha_error">City should be alphabetic only</string>
    <string name="enter_name_error">Enter your name</string>
    <string name="enter_email_error">Enter your email</string>
    <string name="enterphn_error">Enter phone no</string>
    <string name="enter_address_error">Enter the address</string>
    <string name="enter_postal_error">Enter Postal Code</string>
    <string name="enter_City_error">Enter City</string>
    <string name="enter_credit_error">Enter Credit Card No.</string>
    <string name="enter_expiry_error">Enter Expiry date</string>
    <string name="enter_cvv_error">Enter CVV</string>
    <string name="size_checkout">Size:</string>
    <string name="crust_checkout">Crust:</string>
    <string name="toppings_checkout">Toppings:</string>
    <string name="name_checkout">Name:</string>
    <string name="e_mail_checkout">E-Mail:</string>
    <string name="phone_no_checkout">Phone No.</string>
    <string name="address_checkout">Address:</string>
    <string name="city_checkout">City:</string>
    <string name="state_checkout">State:</string>
    <string name="postal_code_checkout">Postal Code:</string>
    <string name="credit_card_no_checkout">Credit Card No:</string>
    <string name="expiry_date_checkout">Expiry date:</string>
    <string name="cvv_checkout">CVV:</string>
    <string name="confirmation_checkout">Confirmation</string>
    <string name="check_out_checkout">Check Out</string>
    <string name="Alert_confirmation_no">Confirmation No. </string>
    <string name="alert_readyTime">\n Will be Ready in 30 minutes</string>
    <string name="naveenMenuHelp">Help</string>
    <string name="naveenMenuPizza">Pizza</string>
    <string name="naveenMenuName">Naveen</string>
    <string name="menu_name_toast">Naveen App</string>
    <string name="order_select_size">Please select size</string>
    <string name="order_select_crust">Please select crust</string>
    <string name="order_select_toppings">Please select toppings</string>

</resources>