<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/PaymentscreenStyle"
    android:background="@drawable/bg_pizza"
    tools:context=".KumarActivityPaymentScreen">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="205dp"
        android:layout_height="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:padding="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/naveen"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/naveenPaymentSizeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/naveenPaymentCrustDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/naveenPaymentToppingsView"
            android:layout_width="205dp"
            android:layout_height="37dp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/naveen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/naveenPaymentSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/payment_size"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/naveenPaymentCrust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/payment_crust"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/naveenPaymentToppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_toppings"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/naveenDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="-16dp">

        <EditText
            android:id="@+id/naveenYourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/naveenEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/naveenPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/naveenAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/naveenCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Spinner
            android:id="@+id/naveenSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="#976E6E" />

        <EditText
            android:id="@+id/naveenPosalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/postal_code"
            android:inputType="textPostalAddress"
            android:maxLength="6"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/naveenCreditNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/credit_card_no"
            android:inputType="phone"
            android:maxLength="16"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/naveenExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/expiry_date"
            android:inputType="phone"
            android:maxLength="4"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/naveenCVV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cvv"
            android:inputType="phone"
            android:maxLength="3"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:onClick="orderClick"
        android:text="Order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naveenDetailsLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>